# njord-trades

./: .gitignore  README.md  docker-compose.yml
trading-engine/: DEPLOYMENT.md  ENGINE_MANUAL.md  IMPLEMENTATION_PLAN.md  MARKET_DATA_REVIEW.md  MULTI_PROVIDER_SETUP.md  Makefile  api.md  devlog.md  prometheus.yml  pyproject.toml
trading-engine/alembic/: env.py
trading-engine/alembic/versions/: 1fe0a89ffe50_added_trades_table.py  34f1659ac5f0_.py  393ad8d37d62_created_a_system_state_table.py  397ca6a8afc7_added_discovery_tables.py  4d0cad9906fb_added_fk_constraint_on_trades.py  554f048e5f99_added_strategy_table.py  6feb8af8ee03_more_discovery_tables.py  6feb8af8ee03_placeholder_empty_migration.py  7da48d279115_add_embedding_tables.py  7f435fea254f_changed_column_from_metadata_to_event_.py  86801a1ad798_added_events_tables.py  XXXXX_add_embedding_tables.py  c68e7bbc89ae_added_portfoilio_tables.py  cd5186c06652_suggested_price.py  ce4acf99c9b7_enable_pgvector_extension.py
trading-engine/docker-init/: langfuse-init.sh
trading-engine/grafana/dashboards/: portfolio.json
trading-engine/src/: config.py
trading-engine/src/agents/: __init__.py  base.py  data_agent.py  meta_agent.py  risk_manager.py  validator.py
trading-engine/src/api/: __init__.py  app.py  dependencies.py  exceptions.py  main.py  middleware.py  schemas.py
trading-engine/src/database/: connection.py  models.py
trading-engine/src/scheduler/: __init__.py  background_jobs.py  event_monitor_job.py  jobs.py  triggers.py
trading-engine/src/services/: persistence.py  (+2 more)
trading-engine/tests/: conftest.py
(+106 files in other folders)
